# Particles

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.bat
3rd/include/: raylib.h
src/: App.cpp  draw.hpp  gravity.cpp  heatObject.cpp  main.cpp  object-runge-kutta-grid.hpp  object-runge-kutta.hpp  object.hpp  utils.hpp  vec.hpp
src/tests/: com.cpp  comparison.cpp  gravity-optim.cpp  gravity.cpp  heat.cpp  interactive-par-grid.cpp  interactive-par.cpp  interactive.cpp  test.cpp
web/: CMakeCache.txt  CMakeLists.txt
web/src/: utils.hpp  vec.hpp
web/src/tests/: App.cpp  interactive.cpp
